added delete function

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "JetBrains Mono", monospace;
+  background-color: #f2f2f2;
+  background-image: url(./assets/images/bg-mobile-light.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 768px) {
+  body {
+    background-image: url(./assets/images/bg-desktop-light.jpg);
+    background-size: contain;
+  }
+
+}
