--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-body {
-  font-family: "JetBrains Mono", monospace;
-  background-color: #f2f2f2;
-  background-image: url(./assets/images/bg-mobile-light.jpg);
-  background-size: cover;
-  max-width: 100%;
-  background-repeat: no-repeat;
-}
+
+
+
 .App {
   display: flex;
   margin: auto;
@@ -55,10 +50,16 @@ body {
   width: 20px;
   border-radius: 50%;
   border: 1px solid #d1d2da;
+  
+  
 }
 
 .checked-icon {
-  background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
+
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, #55ddff 0%, #c058f3 100%);
 }
 
 .check-icon svg {
@@ -79,6 +80,7 @@ body {
 
 .left-box {
   display: flex;
+  position: relative;
 }
 
 .remove-icon {
@@ -90,8 +92,4 @@ body {
   text-decoration: line-through;
 }
 
-@media (min-width: 768px) {
-  body {
-    background-image: url(./assets/images/bg-desktop-light.jpg);
-  }
-}
+
