--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@
   font-size: 32px;
 }
 
-.todo-input {
+.todo-input
+{
   height: 48px;
   width: 327px;
   border-radius: 5px;
@@ -30,6 +31,14 @@
   padding-left: 20px;
   margin-top: 40px;
   margin-bottom: 20px;
+}
+
+.list-features{
+  /* height: 368px; */
+  width: 327px;
+  border-radius: 5px;
+  background-color: blue;
+  
 }
 
 .lists {
