--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,19 @@
   box-sizing: border-box;
 }
 
+
 body {
   font-family: "JetBrains Mono", monospace;
   background-color: #f2f2f2;
-  background-image: url(./assets/images/bg-mobile-light.jpg);
-  background-size: contain;
+  background-image: url(assets/images/bg-mobile-light.jpg);
+  background-size: 100% 27vh;
   background-repeat: no-repeat;
 }
 
 @media (min-width: 768px) {
   body {
-    background-image: url(./assets/images/bg-desktop-light.jpg);
-    background-size: contain;
+    background-image: url(assets/images/bg-desktop-light.jpg);
+    background-size: 100% 27vh;
   }
 
 }
