--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 
 
-
 .App {
   display: flex;
-  margin: auto;
 }
 .main {
   display: flex;
@@ -17,9 +15,20 @@
   align-items: center;
   margin-top: 48px;
 }
+
 .header {
+  width: 327px;
+  display: flex;
+  justify-content: space-between;
   color: #fff;
-  font-size: 32px;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.btn{
+  outline: none;
+  border: none;
+  background: none;
 }
 
 .todo-input
@@ -29,12 +38,28 @@
   border-radius: 5px;
   border: none;
   padding-left: 20px;
-  margin-top: 40px;
+  margin-top: 45px;
   margin-bottom: 20px;
 }
 
+.wrapper.dark input{
+  background-color: #25273D;
+  color: #C8CBE7;
+  outline: none;
+}
+
+.wrapper.dark .lists{
+  background-color: #25273D;
+  color: #C8CBE7;
+  outline: none;
+}
+
+.wrapper.dark .list{
+  color: #C8CBE7;
+  outline: none;
+}
+
 .list-features{
-  /* height: 368px; */
   width: 327px;
   border-radius: 5px;
   background-color: blue;
@@ -59,12 +84,9 @@
   width: 20px;
   border-radius: 50%;
   border: 1px solid #d1d2da;
-  
-  
 }
 
 .checked-icon {
-
     height: 20px;
     width: 20px;
     border-radius: 50%;
@@ -74,6 +96,7 @@
 .check-icon svg {
   margin: 5px auto;
 }
+
 
 .check-btn {
   border: none;
@@ -85,6 +108,7 @@
   font-size: 12px;
   font-weight: 400;
   color: #494c6b;
+
 }
 
 .left-box {
@@ -100,5 +124,8 @@
   color: #d1d2da;
   text-decoration: line-through;
 }
+
+
+
 
 
