--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,11 @@
   background-color: #FFF;
   padding: 20px;
   margin-top: 16px;
+  cursor: pointer;
+}
+
+.footer-three{
+  cursor: pointer;
 }
 
 .input{
